# luvdot

./: CMakeLists.txt  LICENSE  PKGBUILD
.github/workflows/: build.yml  cmake-single-platform.yml  release.yml
src/: color.cpp  conversion.cpp  conversion.hpp  il.cpp  img.cpp  lua.hpp  main.cpp
